--- a/index.html
+++ b/index.html
@@ -29,9 +29,39 @@
                 </ul>
             </div>
         </nav>
-        
-        <div>
 
+        <div class="header">
+            <div class="header-text">
+                <li class="bnr-txt">
+                    PLAY LIKE THE
+                </li>
+                <li class="bnr-highlight">
+                    G.O.A.T.
+                </li>
+                <li class="bnr-list">
+                    <img class="bnr-icon" src="B8A2-Gamer-Zone-main/images/play.png">
+                    1-click instant play
+                </li>
+                <li class="bnr-list">
+                    <img class="bnr-icon" src="B8A2-Gamer-Zone-main/images/download.png">
+                    No Download
+                </li>
+                <li class="bnr-list">
+                    <img class="bnr-icon" src="B8A2-Gamer-Zone-main/images/group.png">
+                    1000s of supported online games
+                </li>
+                <li class="bnr-btn">
+                    <button class="sign-in">
+                        SIGN IN
+                    </button>
+                    <button class="explore">
+                        GO ROUGE
+                    </button>
+                </li>
+            </div>
+            <div class="header-img">
+                <img class="banner" src="B8A2-Gamer-Zone-main/images/Group 18.png">
+            </div>
         </div>
 
     </header>
