--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="hvr-play">
                         <img class="vdo-pic" src="B8A2-Gamer-Zone-main/images/Rectangle 6.png">
                         <div class="hvr-txt">
-                            <img src="B8A2-Gamer-Zone-main/images/play.png" alt="" class="hvr-btn">
+                            <img src="B8A2-Gamer-Zone-main/images/play.png" alt="a" class="hvr-btn">
                             <p>
                                 WATCH NOW
                             </p>
